chore: :bento: add Deploy component on article

--- a/content/articles/formik-yup-combinacion-perfecta-para-manejar-formularios-react.mdx
+++ b/content/articles/formik-yup-combinacion-perfecta-para-manejar-formularios-react.mdx
@@ -23,7 +23,8 @@ Los `formularios` son una parte esencial de muchas aplicaciones web, y en `React
 
 </Section>
 
-<Repository />
+<Repository url="https://github.com/TomasCuevas/Articulos-Proyectos/tree/main/validar-formularios-formik-yup" />
+<Deploy url="https://formik-yup-form-test.netlify.app" />
 
 <Section>
 ## ¿Por qué utilizar Formik y Yup?
