chore: :truck: rename article name

--- a/content/articles/diferencias-types-interfaces-typescript-ventaja-de-utilizarlos.mdx
+++ b/content/articles/diferencias-types-interfaces-typescript-ventaja-de-utilizarlos.mdx
@@ -1,9 +1,9 @@
 ---
 author: "Tomás Cuevas"
 link: "https://www.linkedin.com/in/tomás-cuevas-dev/"
-title: "Diferencia entre types e interfaces en TypeScript y la ventaja de utilizarlos"
+title: "Diferencias entre types e interfaces en TypeScript y la ventaja de utilizarlos"
 date: "2023-06-02"
-description: "Diferencia entre types e interfaces en TypeScript: una guía completa para comprender las ventajas y aplicaciones de types e interfaces en el desarrollo en TypeScript. Aprende cómo utilizarlos de manera efectiva y mejora la estructura de tus objetos y contratos en tu código TypeScript."
+description: "Diferencias entre types e interfaces en TypeScript: una guía completa para comprender las ventajas y aplicaciones de types e interfaces en el desarrollo en TypeScript. Aprende cómo utilizarlos de manera efectiva y mejora la estructura de tus objetos y contratos en tu código TypeScript."
 cardDescription: "En __TypeScript__, una de las características más poderosas es la capacidad de __definir tipos__ y __estructuras de datos personalizados__. Para esto, TypeScript ofrece dos formas principales: __types__ e __interfaces__. Ambos conceptos tienen similitudes, pero también hay diferencias clave que debemos comprender para utilizarlos de manera efectiva en nuestros proyectos."
 category: "typescript"
 tags:
