chore: :bento: update article

--- a/content/articles/testing-en-react-vitest-testing-library.mdx
+++ b/content/articles/testing-en-react-vitest-testing-library.mdx
@@ -20,6 +20,8 @@ keywords: "React, Vitest, Testing Library, pruebas unitarias, testing, desarroll
 
 El `testing` es una parte fundamental en el desarrollo de aplicaciones en `React.js` y en la construcción de componentes. Los `tests` son esenciales para garantizar la _calidad, confiabilidad y mantenibilidad_ de nuestras aplicaciones en React y los componentes que construimos. Nos ayudan a _identificar y corregir errores_, _mejorar el código_ y brindar una base sólida para el desarrollo y la colaboración en equipo.
 
+<Repository url="https://github.com/TomasCuevas/Articulos-Proyectos/tree/main/testing-react-vitest-and-testing-library" />
+
 </Section>
 
 <Section>
