chore: :bento: add conclusion on article

--- a/content/articles/como-nombrar-variables-javascript.mdx
+++ b/content/articles/como-nombrar-variables-javascript.mdx
@@ -148,3 +148,12 @@ En `TypeScript`, las `interfaces` se utilizan para definir la estructura de un `
 - **Utiliza nombres singulares para objetos individuales y plurales para colecciones:** Cuando se trata de objetos individuales, utiliza nombres singulares para las interfaces. Por ejemplo, una interfaz para un objeto _'Persona_' se llamaría _'IPerson'_. Sin embargo, cuando se trata de colecciones de objetos, es recomendable utilizar nombres plurales. Por ejemplo, una interfaz para una colección de objetos _'Persona'_ podría llamarse _'IPeople'_.
 
 </Section>
+
+<Section>
+## Conclusiones
+
+Nombrar adecuadamente las `variables` en `JavaScript` y `TypeScript` es fundamental para garantizar la _legibilidad, mantenibilidad y claridad del código_. Al seguir las buenas prácticas y convenciones presentadas en este artículo, los programadores pueden mejorar la calidad de su código y facilitar su comprensión.
+
+Algunas `reglas generales`, como utilizar _nombres descriptivos, evitar nombres genéricos y utilizar nombres en inglés_, son aplicables a `todos los tipos de variables`. Además, se presentaron pautas específicas para diferentes tipos de variables, como variables comunes, variables de solo lectura, métodos y funciones, clases, interfaces y types.
+
+</Section>
