--- a/src/content/articles/desplegar-aplicacion-de-nestjs-en-vercel.mdx
+++ b/src/content/articles/desplegar-aplicacion-de-nestjs-en-vercel.mdx
@@ -140,7 +140,7 @@ El archivo `vercel.json` es un archivo de configuración específico de `Vercel`
 
 En nuestro caso, para indicar cómo `Vercel` debe desplegar nuestra `aplicación NestJs`, debemos incluir lo siguiente en este archivo:
 
-> vercel.json
+> **vercel.json**
 
 ```json
 {
